--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">OS APIs Sample</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_keyboard">KeyboardActivity</string>
+    <string name="title_activity_device_status">DeviceStatusActivity</string>
+    <string name="title_activity_share">ShareActivity</string>
 
 </resources>
