Implemented dialog fragment transaction helper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_device_status">DeviceStatusActivity</string>
     <string name="title_activity_share">ShareActivity</string>
     <string name="title_activity_camera">CameraActivity</string>
+    <string name="title_activity_dialog_fragment">DialogFragmentActivity</string>
 
 </resources>
